@@ -7,6 +7,9 @@ Revision history for Perl extension HTTP::Headers::ActionPack
       and AcceptLanguage. (Dave Rolsky)
     - If an Accept-Charset header does not contain "*" or "ISO-8859-1", then
       "ISO-8859-1" is given a priority of 1.0, per RFC-2616. (Dave Rolsky)
+    - Content negotiation will never return any item explicitly forbidden
+      ("q=0.0") in the headers, even if the header also accept "*" or that
+      item is specified as a default in your code. (Dave Rolsky)
     - Fix tests that were broken in the absence of HTTP::Message::PSGI
 
 0.05 Mon. Nov. 26th, 2012
